Fixed alignment

--- a/core/app/assets/stylesheets/evidence/evidence_collection.css.less
+++ b/core/app/assets/stylesheets/evidence/evidence_collection.css.less
@@ -10,7 +10,7 @@
 @impactColouredBorderWidth: 3px;
 @evidenceRegionHorizontalMargin: 16px;
 @addEvidenceTopPadding: 50px;
-@evidenceRegionBottomPadding: 10px;
+@evidenceRegionBottomPadding: 60px;
 
 // Arrows:
 @impactCircleVotableWithoutArrowsTopSpacing: 15px;
@@ -413,12 +413,12 @@
 
 .evidence-add-weakening {
   right: 50%;
-  margin-right: 50px;
+  margin-right: 45px + 4px;
   background-color: rgb(203, 89, 89);
 }
 
 .evidence-add-supporting {
   left: 50%;
-  margin-left: 50px;
+  margin-left: 45px + 5px;
   background-color: rgb(24, 171, 117);
 }
